--- a/parks.html
+++ b/parks.html
@@ -10,20 +10,20 @@
 </head>
 
 <body>
+  <a href="#main">skip to the main content</a>
   <header>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
         <li><a href="parks.html">Walks in the Park</a></li>
+        <li> <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue."> </li>
       </ul>
     </nav>
-    <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
     <h1>Michigan Parks</h1>
-
   </header>
-  <main>
-    <div>
+  <main id="main">
+    <div class="imgs2">
       <img src="images/bacon_in_the_woods.jpg" alt="brown labradoodle sitting near a stream in a wooded setting"
         width="100">
       <img src="images/bacon_near_the_fort.jpg"
